# Stride

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  License.txt  OdoEdit.pro  README.md  StreamStack.pro  Stride.pro  baseproject.cpp  baseproject.h  codeeditor.cpp  codeeditor.h  config.pri  languagehighlighter.cpp  languagehighlighter.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  projectwindow.cpp  projectwindow.h  projectwindow.ui  qmlfiles.qrc  simpleproject.cpp  simpleproject.h  ugen.h  ugeninterface.cpp  ugeninterface.h
Ugens/: Modsine.xml
codegen/: CMakeLists.txt  baseproject.h  builder.h  codeanalysis.cpp  codeanalysis.hpp  codeentities.hpp  codegen.cpp  codegen.h  codegen.pro  codequery.cpp  codequery.hpp  coderesolver.cpp  coderesolver.h  codevalidator.cpp  codevalidator.h  languagesyntax.cpp  languagesyntax.hpp  platformfunction.cpp  platformfunction.h  platformobject.cpp  platformobject.h  platformtype.cpp  platformtype.h  porttypes.h  pythonproject.cpp  pythonproject.h  streamplatform.cpp  streamplatform.h  strideframework.cpp  strideframework.hpp  stridelibrary.cpp  stridelibrary.hpp  strideplatform.cpp  strideplatform.hpp  stridesystem.cpp  stridesystem.hpp  systemconfiguration.cpp  systemconfiguration.hpp  toolmanager.cpp  toolmanager.hpp
codegen/src/: astfunctions.cpp  astquery.cpp  astruntime.cpp  astvalidation.cpp  builder_interface.hpp  codeanalysis.cpp  codequery.cpp  coderesolver.cpp  codevalidator.cpp  languagesyntax.cpp  strideframework.cpp  stridelibrary.cpp  stridesystem.cpp  systemconfiguration.cpp  toolmanager.cpp
codegen/tests/: CMakeLists.txt  basic.cpp  library.cpp  schema.cpp
compiler/: CMakeLists.txt  compiler.pro  main.cpp
editor/: CMakeLists.txt  autocompletemenu.cpp  autocompletemenu.hpp  baseproject.cpp  baseproject.h  codeeditor.cpp  codeeditor.h  codemodel.cpp  codemodel.hpp  configdialog.cpp  configdialog.h  configdialog.ui  editor.pro  errormarker.cpp  errormarker.h  languagehighlighter.cpp  languagehighlighter.h  linenumberarea.cpp  linenumberarea.h  localmanagementdialog.cpp  localmanagementdialog.hpp  localmanagementdialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  parser.pri  platform.cpp  platform.h  projectwindow.cpp  projectwindow.h  projectwindow.ui  pythonproject.cpp  pythonproject.h  qmlfiles.qrc  savechangeddialog.cpp  savechangeddialog.h  savechangeddialog.ui  searchwidget.cpp  searchwidget.h  (+14 more)
editor/lua_scripts/: build_project.lua  parse_code.lua  process_template.lua
editor/parser/: ast.cpp  ast.h  lang_stream.l  lang_stream.y  platformnode.h
editor/resources/: style.css
editor/templates/simple/: Makefile
parser/: CMakeLists.txt  ast.cpp  ast.h  astfunctions.cpp  astfunctions.h  astquery.cpp  astquery.h  astruntime.cpp  astruntime.h  astvalidation.cpp  astvalidation.h  blocknode.cpp  blocknode.h  bundlenode.cpp  bundlenode.h  declarationnode.cpp  declarationnode.h  expressionnode.cpp  expressionnode.h  fornode.cpp  fornode.h  functionnode.cpp  functionnode.h  importnode.cpp  importnode.h  keywordnode.cpp  keywordnode.h  keywordnode.hpp  lang_stream.l  lang_stream.y  lang_stride.l  lang_stride.lexer.cpp  lang_stride.parser.cpp  lang_stride.parser.hpp  lang_stride.parser.output  lang_stride.y  langerror.cpp  langerror.h  listnode.cpp  listnode.h  (+24 more)
stridemanager/: CMakeLists.txt  main.cpp  stridemanager.pro
tests/: CMakeLists.txt  buildtester.cpp  buildtester.hpp  tests.pro  tst_parsertest.cpp
tests/data/: 01_header.stride  02_basic_blocks.stride  03_basic_bundle.stream  03_basic_bundle.stride  04_basic_stream.stride  05_basic_functions.stride  07_bundle_indeces.stride  08_namespace.stride  09_lists.stream  09_lists.stride  10_expressions.stride  11_modules.stride  12_modules_domains.stride  13_connection_count.stride  14_members.stride  16_buffer.stride  17_loop.stride  18_block_io_resolution.stride  19_at.stride  20_module_constraints.stride  21_typecast.stride  E01_constant_res.stream  E01_constant_res.stride  E02_stream_expansions.stride  E03_multichn_streams.stride  E04_rates.stride  E05_library_objects.stride  E06_context_domain.stride  E07_namespaces.stride  L01_library_types_validation.stride  P01_platform_objects.stride  P02_check_duplicates.stream  P02_check_duplicates.stride  P03_bundle_resolution.stride  P04_import.stride  P05_import_fail.stride  P06_domains.stride  P07_type_validation.stride  P08_scope.stride  P09_port_property.stride  (+49 more)
tests/data/buffer/: 01_basic.stride  02_output_bundle.stride
tests/data/loop/: 01_simple.stride  03_list_input_in_module.stride  05_iterator.stride  06b_loop_wrong_domains.stride
tests/data/module/: 03_in_and_out.expected  04_port.stride  05_port_domain.expected  05a_ports_same_domain.expected  09_bundle_out.expected  09_bundle_out.stride  12_called_multiple_times.stride  15_library_module.expected  15_library_module.stride  16_platform_module.expected  16_platform_module.stride  17_port_to_port.expected  17_port_to_port.stride  18_port_property.expected  18_port_property.stride  19_port_property_multiple.expected  22_unused_port_block.expected  27_size_port_property.expected  28_three_levels.stride  29_trigger_reset.expected  31_port_property_nested.stride  32_anon_reaction_in_module.stride  34_output_secondary_port.expected  34_output_secondary_port.stride  35_property_input_list.expected  36_property_input_constant.expected  36_property_input_constant.stride  37_trigger_input_block.stride  39_list_in_property_expansion.stride  Generate expected signals.ipynb
tests/data/multidomain/: 03_Wiring.stride
tests/data/platform/: 02_oscillator.expected  03_oscillator_impulse.expected  04_sum.stride  06_Clip.stride  09_Wiring_IO.stride  09_Wiring_IO.stride.config  10_Saturn.stride  12_Counter.stride  13_AudioBlockDomain.stride  14_print.stride  15_tableoscillator.stride  Generate expected signals.ipynb
tests/data/reactions/: 05_outer_instance_portproperties.stride  06_used_only_in_reaction.stride  07_reaction_in_module.stride  09_reaction_in_module2.stride  10_reaction_in_module_input_trigger.stride  11_port_property.stride
(+527 files in other folders)
